--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
   .bio-box a {
     color: green;
   }
+  #orange {
+    background-color: orange;
+  }
+
+  .naranja {
+    background-color: azure;
+  }
     </style>
   </head>
   <body>
@@ -38,16 +45,16 @@
       </li>
     </ul>
     <h2>I'm an h2</h2>
-    <div id="exec-bio" class="bio-box">
+    <div id="exec-bio" class="bio-box naranja">
       <a href="http://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box">
+    <div id="orange" class="bio-box naranja">
       <a href="http://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box">
+    <div class="bio-box naranja">
       <a href="http://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box">
+    <div class="bio-box naranja">
       <a href="http://example.com/">I'm a link</a>
     </div>
   </body>
