--- a/index.html
+++ b/index.html
@@ -3,33 +3,7 @@
   <head>
     <title>Test Page: Don't Panic</title>
     <meta charset="utf-8">
-    <style>
-    a {
-      color: red;
-    }
-    div {
-      border: 1px solid black;
-    }
-    div a {
-      color: green;
-    }
-  #exec-bio {
-    background-color: lightgray;
-  }
-  .bio-box {
-    border: 1px solid black;
-  }
-  .bio-box a {
-    color: green;
-  }
-  #orange {
-    background-color: orange;
-  }
-
-  .naranja {
-    background-color: azure;
-  }
-    </style>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
     <h1>I'm an h1</h1>
@@ -45,16 +19,16 @@
       </li>
     </ul>
     <h2>I'm an h2</h2>
-    <div id="exec-bio" class="bio-box naranja">
+    <div id="exec-bio" class="bio-box">
       <a href="http://example.com/">I'm a link</a>
     </div>
-    <div id="orange" class="bio-box naranja">
+    <div class="bio-box">
       <a href="http://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box naranja">
+    <div class="bio-box">
       <a href="http://example.com/">I'm a link</a>
     </div>
-    <div class="bio-box naranja">
+    <div class="bio-box">
       <a href="http://example.com/">I'm a link</a>
     </div>
   </body>
