--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </ul>
     <div class="bio-box">
   <h3>Michael Hartl</h3>
-  <a href="http://twitter.com/mhartl" >here</a>
+  <a href="http://twitter.com/mhartl" class="social-link">here</a>
   <p>
       Michael is the creator of the <a href="http://railstutorial.org/">
       Ruby on Rails Tutorial</a> and principal author of the
@@ -33,7 +33,7 @@
 </div>
 <div class="bio-box">
   <h3>Lee Donahoe</h3>
-  <a href="https://twitter.com/leedonahoe" >here</a>
+  <a href="https://twitter.com/leedonahoe" class="social-link">here</a>
   <p>
     When he's not literally swimming with sharks or hunting powder stashes on
     his snowboard, you can find Lee in front of his computer designing
@@ -43,7 +43,7 @@
 </div>
 <div class="bio-box">
   <h3>Nick Merwin</h3>
-  <a href="https://twitter.com/nickmerwin" >here</a>
+  <a href="https://twitter.com/nickmerwin" class="social-link" >here</a>
   <p>
     You may have seen him shredding guitar live with Capital Cities on Jimmy
     Kimmel, Conan, or The Ellen Show, but rest assured Nick is a true nerd at
